<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:background="@color/ColorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include android:id="@+id/toolbar"
            layout="@layout/tool_bar"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="15dp">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/str_time_start"
                    android:textColor="@color/ColorTextView"/>
                <Button
                    android:id="@+id/btnSetTimeStart"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="Button"
                    style="@style/CustomStyleButton"
                    android:layout_marginLeft="10dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/str_time_stop"
                    android:textColor="@color/ColorTextView"/>
                <Button
                    android:id="@+id/btnSetTimeStop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="Button"
                    style="@style/CustomStyleButton"
                    android:layout_marginLeft="10dp"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/str_floor_first"
                    android:textColor="@color/ColorTextView"/>
                <EditText
                    android:id="@+id/editFloorFirst"
                    style="@style/styleEditText"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/str_floor_end"
                    android:textColor="@color/ColorTextView"/>
                <EditText
                    android:id="@+id/editFloorEnd"
                    style="@style/styleEditText"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/str_interval_time"
                    android:textColor="@color/ColorTextView"/>
                <EditText
                    android:id="@+id/editIntervalTime"
                    style="@style/styleEditText"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:text="@string/str_max_weight"
                    android:textColor="@color/ColorTextView"/>
                <EditText
                    android:id="@+id/editMaxWeight"
                    style="@style/styleEditText"/>
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/btnSaveConfig"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/str_btnSaveConfig"
                    style="@style/CustomStyleButton"
                    android:layout_column="2"
                    android:layout_marginLeft="10dp"/>

            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>